upgrade: add comment and my happiness

--- a/chejing/project.config.json
+++ b/chejing/project.config.json
@@ -23,6 +23,7 @@
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"cloudfunctionRoot": "cloudFunctions/",
+	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
 	"condition": {
 		"search": {
 			"current": -1,
